--- a/Home/templates/Home/attendance.html
+++ b/Home/templates/Home/attendance.html
@@ -8,7 +8,7 @@
     <div class="row mb-3" id="table_content">
         <div class="media mt-3 col-md-7 themed-grid-col" style="display: flex;flex-direction: column;">
             <div id="camera">
-                <img src="{% url 'home_video_feed' %}" alt="sorry unable to open" id="video" width="600" height="500">
+                <img src="{% url 'home_attendance' %}" alt="sorry unable to open" id="video" width="600" height="500">
             </div>
             <div class="media-body">
                 <button class="btn btn-outline-success mt-3" id="open_close_camera">Camera toggle</button>
